fix stretched battery image in action center

--- a/css/styles.css
+++ b/css/styles.css
@@ -260,7 +260,6 @@ img {
 }
 
 .actioncenterbattery img{
-  height: min-content;
   margin-right: 5px;
 }
 
